Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-85451

Edit widget in QTreeView has wrong size when Qt::ItemIsUserCheckable is set

    XMLWordPrintable

Details

    • Windows
    • eb201a57dbeff93d788546e61b193dcf4f4258b9 (qt/qtbase/dev) 7fbf1f87db3109d35cbdd4752c7a6e5bd7fce5eb (qt/qtbase/5.15)

    Description

      Please refer to the attached sample, When you double click the item to edit it, the number is not visible because the spin box is too small.
      This only seems to happen when the Qt::ItemIsUserCheckable flag is set and the Qt::CheckStateRole is either Qt::Checked or Qt::Unchecked.
      The problem doesn't occur with QTableView.

      Attachments

        For Gerrit Dashboard: QTBUG-85451
        # Subject Branch Project Status CR V

        Activity

          People

            qt.team.quick.subscriptions Qt Quick and Widgets Team
            shmittal Shveta Mittal (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes