Compare the showDecorationSelected variable when caching the option

Since the size of the display rect can change if showDecorationSelected
is set then this should be included when seeing if the item is already
cached.

Change-Id: Ied6182337de5894d879c5ba5d1125b4869a11cc9
Fixes: QTBUG-85451
Reviewed-by: Friedemann Kleint <Friedemann.Kleint@qt.io>
Reviewed-by: Volker Hilsheimer <volker.hilsheimer@qt.io>
(cherry picked from commit eb201a57dbeff93d788546e61b193dcf4f4258b9)
Reviewed-by: Qt Cherry-pick Bot <cherrypick_bot@qt-project.org>